kubernetes/argocd-apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: web
      port: 80
      targetPort: http
